--- a/src/main/resources/static/main/administrator.html
+++ b/src/main/resources/static/main/administrator.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/loginStyle.css" /> </head>
 </head>
 <body ng-controller="student-controller">
-<div class="loginBlock"><p>
+<div class="mainBlock"><p>
     Hi, administrator! <br>
     Your name {{name}}
 </p></div>
