--- a/src/main/resources/static/main/superStudent.html
+++ b/src/main/resources/static/main/superStudent.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/loginStyle.css" /> </head>
 </head>
 <body ng-controller="superstud-controller">
-<div class="loginBlock"><p>
+<div class="mainBlock"><p>
     <h1>Hi, SuperStudent!</h1> <br>
     Your name {{name}}
 </p></div>
