--- a/src/main/resources/static/main/teacher.html
+++ b/src/main/resources/static/main/teacher.html
@@ -8,9 +8,9 @@
     <title>Time For Study</title>
     <link rel="stylesheet" href="../css/loginStyle.css" /> </head>
 </head>
-<body >
+<body>
 <form ng-controller="teacherController">
-<div class="loginBlock"><p>
+<div class="mainBlock"><p>
     <h1>Hi, teacher!</h1> <br>
     Your name: {{name}}
 </p></div>
