--- a/src/main/resources/static/main/student.html
+++ b/src/main/resources/static/main/student.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/loginStyle.css" /> </head>
 </head>
 <body ng-controller="student-controller">
-<div class="loginBlock"><p>
+<div class="mainBlock"><p>
     <h1>Hi, student! </h1><br>
     Your name: {{name}}
 </p></div>
