TFS-210 page for adding university completed

--- a/src/main/resources/static/main/addUniversity.html
+++ b/src/main/resources/static/main/addUniversity.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div class="mainBlock" ng-controller="control">
+<div class="mainBlock" style="height: 700px;" ng-controller="control">
     <div class="header"><span>Time For Study</span>
         <nav class="top-menu">
             <ul class="menu-main">
