--- a/src/main/resources/static/main/student.html
+++ b/src/main/resources/static/main/student.html
@@ -6,13 +6,14 @@
     <link rel="icon" href="../icon/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
-    <link rel="stylesheet" href="../css/loginStyle.css" /> </head>
+    <link rel="stylesheet" href="../css/loginStyle.css" />
+    <link rel="stylesheet" href="../css/mainStyle.css" />
 </head>
 <body ng-controller="student-controller">
-<div class="mainBlock"><p>
+<div class="mainBlock" style="height: 100px; width: 300px;">
     <h1>Hi, student! </h1><br>
     Your name: {{name}}
-</p></div>
+</div>
 <script src="../lib/common/jquery.min.js"></script>
 <script src="../lib/angular/angular.js"></script>
 <script src="../lib/angular/angular-route.js"></script>
