--- a/src/main/resources/static/main/teacher.html
+++ b/src/main/resources/static/main/teacher.html
@@ -6,14 +6,15 @@
     <link rel="icon" href="../icon/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
-    <link rel="stylesheet" href="../css/loginStyle.css" /> </head>
+    <link rel="stylesheet" href="../css/loginStyle.css" />
+    <link rel="stylesheet" href="../css/mainStyle.css" />
 </head>
 <body>
 <form ng-controller="teacherController">
-<div class="mainBlock"><p>
+    <div class="mainBlock" style="height: 200px; width: 400px;">
     <h1>Hi, teacher!</h1> <br>
     Your name: {{name}}
-</p></div>
+</div>
 </form>
 <script src="../lib/common/jquery.min.js"></script>
 <script src="../lib/angular/angular.js"></script>
