--- a/src/main/resources/static/main/superStudent.html
+++ b/src/main/resources/static/main/superStudent.html
@@ -6,14 +6,13 @@
     <link rel="icon" href="../icon/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
-    <link rel="stylesheet" href="../css/loginStyle.css" />
-    <link rel="stylesheet" href="../css/mainStyle.css" />
+    <link rel="stylesheet" href="../css/mainStyle.css" /> </head>
 </head>
 <body ng-controller="superstud-controller">
-<div class="mainBlock" style="height: 200px; width: 400px;">
+<div class="mainBlock"><p>
     <h1>Hi, SuperStudent!</h1> <br>
     Your name {{name}}
-</div>
+</p></div>
 <script src="../lib/common/jquery.min.js"></script>
 <script src="../lib/angular/angular.js"></script>
 <script src="../lib/angular/angular-route.js"></script>
