--- a/src/main/resources/static/main/newhomepage.html
+++ b/src/main/resources/static/main/newhomepage.html
@@ -46,24 +46,23 @@
                 <table>
                     <tr>
                         <td>
-                            <grid class="day" day="mon"></grid>
+                            <grid  day="Понедельник" num="1"></grid>
                         </td>
                         <td>
-                            <grid class="day" day="tue"></grid>
+                            <grid  day="Вторник" num="2"></grid>
                         </td>
                         <td>
-                            <grid class="day" day="wed"></grid>
+                            <grid  day="Среда" num="3"></grid>
                         </td>
                         <td>
-                            <grid class="day" day="thu"></grid>
+                            <grid  day="Четверг" num="4"></grid>
                         </td>
                         <td>
-                            <grid class="day" day="fri"></grid>
+                            <grid  day="Пятница" num="5"></grid>
                         </td>
                         <td>
-                            <grid class="day" day="sat"></grid>
+                            <grid  day="Суббота" num="6"></grid>
                         </td>
-                        <!--                        <td><grid class="day" day="sun"></grid></td>-->
                     </tr>
                 </table>
             </div>
