TFS-215 stable addLesson.html

--- a/src/main/resources/static/main/addLesson.html
+++ b/src/main/resources/static/main/addLesson.html
@@ -26,19 +26,19 @@
 <div class="container" ng-controller="control">
     <p>Преподаватель:</p>
     <div style="position: relative; height: 80px;">
-        <input type="text" id="teacher"/>
+        <input type="text" id="teacher" spellcheck="false" style="width: 300px"/>
     </div>
     <p>Аудитория:</p>
     <div style="position: relative; height: 80px;">
-        <input type="text" id="classroom"/>
+        <input type="text" id="classroom" spellcheck="false" style="width: 300px"/>
     </div>
     <p>Группа:</p>
     <div style="position: relative; height: 80px;">
-        <input type="text" id="group"/>
+        <input type="text" id="group" spellcheck="false" style="width: 300px"/>
     </div>
     <p>Дисциплина:</p>
     <div style="position: relative; height: 80px;">
-        <input type="text" id="subject"/>
+        <input type="text" id="subject" spellcheck="false" style="width: 300px"/>
     </div>
     <button ng-click="show()">showSellected</button>
 </div>
