--- a/src/main/resources/static/main/addLesson.html
+++ b/src/main/resources/static/main/addLesson.html
@@ -16,7 +16,7 @@
     <script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/themes/sunny/jquery-ui.css">
     <script type="text/javascript" src="../js/myInput.js">
-    <script src="../js/app.js"></script>
+        <script src="../js/app.js"></script>
     <script src="../js/services.js"></script>
     <script src="../js/filters.js"></script>
     <script src="../js/homepage.js"></script>
@@ -32,9 +32,10 @@
     <div style="position: relative; height: 80px;">
         <input type="text" id="classroom" spellcheck="false" style="width: 300px"/>
     </div>
-    <p>Группа:</p>
+    <p>Группы:</p>
     <div style="position: relative; height: 80px;">
-        <input type="text" id="group" spellcheck="false" style="width: 300px"/>
+        <input type="text" id="groups" spellcheck="false" style="width: 300px"/>
+        <group-box></group-box>
     </div>
     <p>Дисциплина:</p>
     <div style="position: relative; height: 80px;">
@@ -42,5 +43,8 @@
     </div>
     <button ng-click="show()">showSellected</button>
 </div>
+<script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+</script>
 </body>
 </html>
