--- a/src/main/resources/static/main/addLesson.html
+++ b/src/main/resources/static/main/addLesson.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
     <link href="../css/mainStyle.css" rel="stylesheet" />
+    <link href="../css/addLessonForm.css" rel="stylesheet" />
     <link href="../css/menu.css" rel="stylesheet" />
     <script src="../lib/jquery/jquery.js"></script>
     <script src="../lib/angular/angular.js"></script>
@@ -15,8 +16,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/themes/sunny/jquery-ui.css">
-    <script type="text/javascript" src="../js/myInput.js">
-        <script src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/myInput.js"></script>
+    <script src="../js/app.js"></script>
     <script src="../js/services.js"></script>
     <script src="../js/filters.js"></script>
     <script src="../js/homepage.js"></script>
@@ -24,24 +25,7 @@
 </head>
 <body>
 <div class="container" ng-controller="control">
-    <p>Преподаватель:</p>
-    <div style="position: relative; height: 80px;">
-        <input type="text" id="teacher" spellcheck="false" style="width: 300px"/>
-    </div>
-    <p>Аудитория:</p>
-    <div style="position: relative; height: 80px;">
-        <input type="text" id="classroom" spellcheck="false" style="width: 300px"/>
-    </div>
-    <p>Группы:</p>
-    <div style="position: relative; height: 80px;">
-        <input type="text" id="groups" spellcheck="false" style="width: 300px"/>
-        <group-box></group-box>
-    </div>
-    <p>Дисциплина:</p>
-    <div style="position: relative; height: 80px;">
-        <input type="text" id="subject" spellcheck="false" style="width: 300px"/>
-    </div>
-    <button ng-click="show()">showSellected</button>
+    <add-lesson-form></add-lesson-form>
 </div>
 <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
