--- a/src/main/resources/static/main/homepage.html
+++ b/src/main/resources/static/main/homepage.html
@@ -6,26 +6,32 @@
     <link rel="icon" href="../icon/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
+
     <link href="../css/mainStyle.css" rel="stylesheet" />
     <link href="../css/menu.css" rel="stylesheet" />
     <link href="../css/timetable.css" rel="stylesheet" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/themes/sunny/jquery-ui.css">
-    <script src="../lib/jquery/jquery.js"></script>
-    <script src="../lib/jquery/jquery.maskedinput.min.js"></script>
+    <link href="../css/searchStyle.css" rel="stylesheet" />
+    <link href="../css/universitySettings.css" rel="stylesheet" />
+    <link href="../css/addLessonForm.css" rel="stylesheet" />
+
     <script src="../lib/angular/angular.js"></script>
     <script src="../lib/angular/angular.min.js"></script>
     <script src="../lib/angular/angular-route.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="../lib/jquery/jquery.js"></script>
+    <script src="../lib/jquery/jquery.maskedinput.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/themes/sunny/jquery-ui.css">
+
     <script src="../js/homepage.js"></script>
-    <script src="../js/timetable.js"></script>
-    <script src="../js/searchController.js"></script>
 </head>
 
 <body ng-controller="control">
 <div id="mainBlockId" class="mainBlock">
-    <div class="header"><div><span>Time For Study</span></div>
+    <div class="header"><div>
+        <span>Time For Study</span>
+        <span>{{Uniname}}</span>
+    </div>
         <nav id="menu" class="top-menu">
             <ul class="menu-main">
                 <li>
@@ -37,23 +43,33 @@
                     <label for="tab_2" id="search_label">Поиск</label>
                 </li>
                 <li>
-                    <input type="radio" name="inset" value="" id="tab_3" onclick="showHide('settings')" data-block-id="settings">
-                    <label for="tab_3" id="settings_label">Настройки</label>
+                    <input type="radio" name="inset" value="" id="tab_3" onclick="showHide('lesson')" data-block-id="lesson">
+                    <label for="tab_3" id="lesson_label">Добавить lesson</label>
+                </li>
+                <li>
+                    <input type="radio" name="inset" value="" id="tab_4" onclick="showHide('settings')" data-block-id="settings">
+                    <label for="tab_4" id="settings_label">Настройки</label>
                 </li>
             </ul>
         </nav>
     </div>
     <div class="pages">
-        <div id="timetable" class="page"  ng-controller="timetableControl">
+        <div id="timetable" class="page" style="display: block;">
             <grid ></grid>
             <info-box ng-show="infoShow"></info-box>
         </div>
-        <div id="search" class="page" style="display: block;">
+        <div id="search" class="page" >
             <h2>Поиск</h2>
             <search-block></search-block>
         </div>
+        <div id="lesson" class="page" >
+            <h2>Добавление пары</h2>
+            <add-lesson-form></add-lesson-form>
+        </div>
         <div id="settings" class="page">
-            <h2>Настройки</h2> </div>
+            <h2>Настройки</h2>
+            <university-settings></university-settings>
+        </div>
     </div>
 </div>
 <script>
