TFS-220 making userSettings.html in process

--- a/src/main/resources/static/main/homepage.html
+++ b/src/main/resources/static/main/homepage.html
@@ -94,8 +94,7 @@
         </div>
         <div id="settings" class="page">
             <university-settings ng-show="dispetcherPages"></university-settings>
-            <h2 ng-show="studprofPages">тут настрйоки пользователя</h2>
-<!--            настройки пользователя-->
+            <user-settings ng-show="studprofPages"></user-settings>
         </div>
     </div>
 </div>
